--- a/src/main/webapp/pages/cadastros.xhtml
+++ b/src/main/webapp/pages/cadastros.xhtml
@@ -16,6 +16,18 @@
 
 <br/>
 
+<p:link value="Cadastro Fornecedor" href="cadastroFornecedor.xhtml?i=1">
+</p:link>
+
+<br/>
+<br/>
+
+<p:link value="Cadastro Produto" href="cadastroProduto.xhtml?i=1">
+</p:link>
+
+<br/>
+<br/>
+
 <!-- Cadastro Professor -->
 <p:link value="Cadastro Professor" href="cadastroProfessor.xhtml?i=1">
 </p:link>
