falta terminar o cadastro perguntas

--- a/src/main/webapp/pages/cadastroProfessor.xhtml
+++ b/src/main/webapp/pages/cadastroProfessor.xhtml
@@ -19,7 +19,8 @@
 	    <h:panelGrid columns="3" >
 	     
 	     <p:outputLabel value="Nome:"/>
-	     <p:inputText id="nome" value = "#{professorManagedBean.professor.nomeProf}" 
+	     <p:inputText id="nome" 
+	     value = "#{professorManagedBean.professor.nomeProf}" 
 	    required="true" />
          <p:message for="nome"/>
          
