ajustado o pt br, falta gerar prova e o en-us

--- a/src/main/webapp/pages/templateMenu.xhtml
+++ b/src/main/webapp/pages/templateMenu.xhtml
@@ -38,7 +38,7 @@
 			</p:layoutUnit>
 		</p:layout>
 		
-<p:tabMenu activeIndex="#{param.i}" rendered = "true">
+<p:tabMenu activeIndex="#{param.i}" >
     <p:menuitem value="Inicio" url="inicio.xhtml?i=0" icon="fa fa-home" >
         <f:param name="i" value="0" />
     </p:menuitem>
