Gerando pdf da prova, falta imagem da pergunta e os itens.

--- a/src/main/webapp/pages/cadastroConteudo.xhtml
+++ b/src/main/webapp/pages/cadastroConteudo.xhtml
@@ -19,7 +19,7 @@
 	    <p:panel  header="#{msg['pages.cadastroConteudo.menu']}" style="margin-bottom:10px;">
 	    <h:panelGrid columns="3">
 	     
-	     <p:outputLabel value="Nome:"/>
+	     <p:outputLabel value="#{msg['pages.cadastroConteudo.form.nomeCont']}"/>
 	     <p:inputText id="nome" value = "#{conteudoManagedBean.conteudo.nomeCont}" 
 	    required="true" />
 	    <p:message for="nome"/>
