--- a/src/main/webapp/pages/cadastros.xhtml
+++ b/src/main/webapp/pages/cadastros.xhtml
@@ -42,6 +42,20 @@
 <br/>
 <br/>
 
+<!-- Cadastro Item -->
+<p:link value="Cadastro Item" href="cadastroItem.xhtml?i=1">
+</p:link>
+
+<br/>
+<br/>
+
+<!-- Cadastro Pergunta -->
+<p:link value="Cadastro Pergunta" href="cadastroPergunta.xhtml?i=1">
+</p:link>
+
+<br/>
+<br/>
+
 <!-- Cadastro Conteudo -->
 <p:link value="Cadastro Conteudo" href="cadastroConteudo.xhtml?i=1">
 </p:link>
@@ -54,12 +68,9 @@
 </p:link>
 
 
-<br/>
-<br/>
 
-<!-- Cadastro Pergunta -->
-<p:link value="Cadastro Pergunta" href="cadastroPergunta.xhtml?i=1">
-</p:link>
+
+
     
 
 
