--- a/src/main/webapp/pages/templateMenu.xhtml
+++ b/src/main/webapp/pages/templateMenu.xhtml
@@ -45,14 +45,17 @@
     <p:menuitem value="Cadastros" url="cadastros.xhtml?i=1" icon="fa fa-pencil-square-o">
         <f:param name="i" value="1" />
     </p:menuitem>
-    <p:menuitem value="Idioma" url="linguagem.xhtml?i=2" icon="fa fa-language">
-        <f:param name="i" value="2" />
-     </p:menuitem>
-     <p:menuitem value="Configurações" url="configuracao.xhtml?i=3" icon="fa fa-gear">
+     <p:menuitem value="Gerar Prova" url="geradorProva.xhtml?i=2" icon="fa fa-cog">
+   	<f:param name="i" value="2" />
+    </p:menuitem>
+    <p:menuitem value="Idioma" url="linguagem.xhtml?i=3" icon="fa fa-language">
         <f:param name="i" value="3" />
      </p:menuitem>
-     <p:menuitem value="Sobre" url="sobre.xhtml?i=4" icon="fa fa-info">
-   	<f:param name="i" value="4" />
+     <p:menuitem value="Configurações" url="configuracao.xhtml?i=4" icon="fa fa-wrench">
+        <f:param name="i" value="4" />
+     </p:menuitem>
+     <p:menuitem value="Sobre" url="sobre.xhtml?i=5" icon="fa fa-info">
+   	<f:param name="i" value="5" />
     </p:menuitem>
 </p:tabMenu>
 
