Traduções realizadas para todo o sistema.

--- a/src/main/webapp/pages/linguagem.xhtml
+++ b/src/main/webapp/pages/linguagem.xhtml
@@ -16,7 +16,7 @@
 	<ui:define name="principal">
 	 	 
 	 	 <br/>
-	 	 <p:panel header="Idiomas Disponíveis" style="margin-bottom:10px;">
+	 	 <p:panel header="#{msg['pages.linguagem.idiomaDisp']}" style="margin-bottom:10px;">
 	 	 <h:panelGrid columns="2">
 	 	 
 	 	 <h:form >
