--- a/src/main/webapp/pages/inicio.xhtml
+++ b/src/main/webapp/pages/inicio.xhtml
@@ -7,7 +7,7 @@
 	xmlns:tm="http://java.sun.com/jsf/composite/terminal/1_0/components">
 	
 	<ui:define name="title">
-		<h:outputText value="Início" />
+		<h:outputText value="#{msg['pages.inicio.title']}" />
 	</ui:define>
 
 	<ui:define name="principal">
