Arrumado alguns bugs, Projeto pronto

--- a/src/main/webapp/pages/geradorProva.xhtml
+++ b/src/main/webapp/pages/geradorProva.xhtml
@@ -49,7 +49,7 @@ href="cadastroProva.xhtml?i=1" ajax="false">
  	</p:panel>
  	<br/>
  		<p:commandButton value="#{msg['pages.geradorProva.form.btn.gerarProva']}" id="geraPDF"
- 		action="#{geradorPDF.gerador}" 
+ 		action="#{geradorPDF.gerador}" icon="fa fa-cog"
  		styleClass="ui-priority-primary" ajax="false" 
  		update=":formGeradorProva"/>
  	</h:form>
