--- a/src/main/webapp/pages/cadastroDisciplina.xhtml
+++ b/src/main/webapp/pages/cadastroDisciplina.xhtml
@@ -37,7 +37,7 @@ href="cadastroItem.xhtml?i=1" ajax="false">
         <p:selectOneMenu value="#{disciplinaManagedBean.professor}" 
         converter="converterProfessor" panelStyle="width:180px" id="Profess"
       effect="fade" var="sm" style="width:191px" filter="true"
-       filterMatchMode="startsWith" required="true" >
+       filterMatchMode="contains" required="true" >
        
        <f:selectItem itemValue=""
        itemLabel="#{msg['pages.cadastroDisciplina.form.sm.professor']}" />
