--- a/src/main/webapp/pages/cadastroProva.xhtml
+++ b/src/main/webapp/pages/cadastroProva.xhtml
@@ -78,7 +78,7 @@ href="cadastroProfessor.xhtml?i=1" ajax="false">
         <p:selectOneMenu value="#{provaManagedBean.disciplina}" id = "disci"
         converter="converterDisciplina" panelStyle="width:180px"
       effect="fade" var="sm" style="width:191px" filter="true"
-       filterMatchMode="startsWith" required="true">
+       filterMatchMode="contains" required="true">
       
        <f:selectItem itemValue="" 
        itemLabel="#{msg['pages.cadastroProva.form.sm.disciplina']}" />
